# mklists

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yml  Architecture.txt  CLAUDE.md  Contexts.txt  DESIGN.md  Dataclasses.txt  Model.txt  Plan.txt  README.rst  Restructure.txt  asdf  asdf.py  defdir.txt  fileswith  jkl  mkdocs.yml  mklists_publish.md  modules.txt  pyproject.toml  pytest.ini  requirements.txt  rulefiles_used  settings.json
docs/: caution.rst  conf.py  defdir.txt  glossary.rst  index.md  index.rst  intro.rst  naming.rst  requirements.txt
docs/backups/: index.rst
docs/caution/: index.rst
docs/configuration/: binary_file_detection.md  config_files.md  linkify.md
docs/css/: custom.css
docs/discussion/: datafile_sortorder.md  execution_model.md  support_for_audits.md  use_of_symlinks.md
docs/glossary/: index.rst
docs/mklists/: mklists_init_datadir.md  mklists_init_datatree.md  mklists_run.md  mklists_status.md
docs/notes/: configstuff.txt  get_validated_filename  move_files.txt  rename_files  what_makes_mklists_exit.txt
hooks/: pre-commit
mklists/: apply.py  backup.py  cli.py  config.py  exceptions.py  linkify.py  rules.py
src/mklists/: backup_datadir.py  backup_run.py  cli.py  config.py  config_logger.py  contexts.py  contexts_datadir.py  contexts_run.py  datadirs.py  dispatch.py  errors.py  execute.py  logging.py  plan.py  process_datadirs.py  routing.py  rules.py  run.py  run_backups.py  run_urlify.py  safety.py  structure.py  utils.py
tests/: __init__.py  conftest.py  rename
tests/apply/: test__dataline_matches_ruleobj.py  test__dsusort_lines.py  test__get_rootdir_path.py  test__get_visiblefile_paths.py  test__line_matches_pattern.py  test__ls_visiblefile_paths.py  test__sort_targetlines.py  test_apply_rules_to_datalines.py  test_find_data_subdir_paths.py  test_get_configdict.py  test_get_datadir_paths.py  test_get_datalines.py  test_move_specified_datafiles_elsewhere.py  test_write_new_datafiles.py
tests/backup/: test__delete_older_backupdirs.py  test__form_backupsub_pathname.py  test__get_backupsub_path.py  test_move_datafiles_to_backupdir.py
tests/backup_run/: test__make_backup_passdir_path.py  test__prune_backupdirs.py
tests/backups/: test__init_backup_passdir.py  test_backup_datadir.py
tests/cli/: test_cli.py
tests/config/: test__check_for_unknown_keys.py  test__deepmerge_dicts.py  test__load_configdict_from_yaml.py  test__load_merged_configdict.py  test__load_yaml.py  test__make_backup_config.py  test__make_linkify_config.py  test__make_mklists_config.py  test__make_routing_config.py  test_resolve_config.py  test_write_minimal_rulefiles.py  test_write_starter_configfile.py  test_write_starter_datafile.py  test_write_starter_rulefiles.py
tests/config_logger/: test__make_logsink_specs.py  test_init_logger.py
tests/constants/: test_variables.py
tests/contexts/: test__find_datadirs.py  test_resolve_datadir_contexts.py
tests/contexts_datadir/: test__find_datadir_configfile.py  test__find_datadir_rulefile.py  test__resolve_effective_rulefiles.py  test_resolve_datadir_context.py
tests/contexts_run/: test__determine_rundir.py  test__find_datadirs.py  test__find_repo_configfile.py  test__find_repo_rulefile.py  test_resolve_run_context.py
tests/datadirs/: test__delete_datafiles.py  (+3 more)
(+160 files in other folders)
