[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mklists"
author = "Tom Baker"
author-email = "tom@tombaker.org"
home-page = "https://github.com/tombaker/mklists"
requires = [
    "click",
    "dataclasses",
    "ruamel.base",
    "ruamel.yaml",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing",
    "Intended Audience :: End Users/Desktop",
]
description-file = 'README.rst'
requires-python = '>=3.7'

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "pytest-cov",
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

[tool.flit.scripts]
mklists = "mklists.cli:cli"
