[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mklists"
version = "0.2.2"
description = "Sync your plain-text lists to evolving rules"
authors = [{name = "Tom Baker", email = "tom@tombaker.org"}]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.11"

dependencies = [
    "click >=8.1.3, <9.0",
    "ruamel.base >=1.0.0, <2.0",
    "ruamel.yaml >=0.17.31, <0.18",
    "ipython-suggestions >=1.0.0, <2.0",
    "jupyter-book >=0.15.1, <0.16"
]

[project.urls]
Source = "https://github.com/tombaker/mklists"
Documentation = "https://mklists.readthedocs.io"
# Add other URLs as necessary

[project.optional-dependencies]
test = [
    "pytest >=7.3.1, <8.0",
    "pytest-cov >=4.1.0, <5.0"
]
doc = [
    "sphinx",
    "sphinx_rtd_theme",
]

[project.scripts]
mklists = "mklists.cli:cli"

[project.classifiers]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.7",
    "Topic :: Text Processing",
    "Intended Audience :: End Users/Desktop"
]

