[project]
name = "mklists"
version = "0.1.0"
description = ""
authors = [{ name = "Tom Baker", email = "tom@tombaker.org" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dynamic = ["dependencies"]

[tool.poetry]
packages = [{include = "mklists", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.14,<4.0"
pyyaml = ">=6.0.3,<7.0.0"
loguru = "^0.7.3"
click = "^8.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"
black = "^26.3.1"
coverage = "^7.5"
pylint = "^4.0.4"
ruff = "^0.14.11"
ipython = "^9.9.0"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

# Match flake8 excludes
exclude = [
  ".git",
  ".idea",
  ".ipynb_checkpoints",
  ".pytest_cache",
  ".venv",
  "docs",
  "explore",
  "htmlcov",
  "notes",
  "tests",
]

[tool.ruff.lint]
# Match flake8 ignores (Black-compatible)
extend-ignore = [
    "E203",  # whitespace before ":"
]

[tool.ruff.lint.per-file-ignores]
# Match flake8 per-file ignores
"tests/**/*.py" = [
    "E501",  # line too long
    "W291",  # trailing whitespace
]

[tool.mypy]
python_version = "3.14"
strict = true
